css_grid and select_cities

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </form>
     </div>
 
-    <div>
+    <!--<div>
         <h4>Пользователи:</h4>
-        <table size="11" class="table">
+        <table class="table">
             <thead>
                 <tr>
                     <th>ФИО</th>
@@ -37,6 +37,15 @@
 
             </tbody>
         </table>
+    </div>-->
+
+    <div class="grid-h">
+        <div class="grid-head">ФИО</div>
+        <div class="grid-head">Образование</div>
+        <div class="grid-head">Города</div>
+    </div>
+    <div class="grid">
+
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
