--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="assets/js/jquery-2.2.2.min.js"></script>
 <script src="assets/js/script.js"></script>
 
 </body>
